[tool.poetry]
name = "echo-api"
version = "0.1.0"
description = "A simple API that echoes back request data"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"